--- a/index.html
+++ b/index.html
@@ -535,6 +535,8 @@ This look focuses on enhancing your best features through expert blending and a 
         // document.querySelector('.booking-box').reset();
     });
 </script>
+</body>
+</html>
 
 <!-- Contact Section -->
 <section id="contact" class="section">
