--- a/index.html
+++ b/index.html
@@ -480,10 +480,10 @@ This look focuses on enhancing your best features through expert blending and a 
             return;
         }
 
-        // Here you can implement what happens when the form is submitted
-        alert(`Booking submitted!\nName: ${fullName}\nEmail: ${email}\nPhone: ${phone}\nService: ${service}\nDate: ${date}\nTime: ${time}\nNotes: ${notes}`);
+        // Success message
+        alert(`Thank you for booking us! Be ready to be A.GEELIZED!\n\nBooking Details:\nName: ${fullName}\nEmail: ${email}\nPhone: ${phone}\nService: ${service}\nDate: ${date}\nTime: ${time}\nNotes: ${notes}`);
         
-        // Optionally, reset the form
+        // Optionally, reset the form after submission
         // document.querySelector('.booking-box').reset();
     });
 </script>
