--- a/index.html
+++ b/index.html
@@ -461,6 +461,8 @@ This look focuses on enhancing your best features through expert blending and a 
 
         <button id="submitBtn">Submit Booking</button>
     </div>
+
+    <div id="responseMessage" style="margin-top: 20px; display: none; color: green; font-weight: bold;"></div>
 </section>
 
 <script>
@@ -480,14 +482,15 @@ This look focuses on enhancing your best features through expert blending and a 
             return;
         }
 
-        // Success message
-        alert(`Thank you for booking us! Be ready to be A.GEELIZED!\n\nBooking Details:\nName: ${fullName}\nEmail: ${email}\nPhone: ${phone}\nService: ${service}\nDate: ${date}\nTime: ${time}\nNotes: ${notes}`);
-        
+        // Display thank-you message
+        const responseMessage = document.getElementById('responseMessage');
+        responseMessage.textContent = `Thank you for booking us, ${fullName}! Be ready to be A.GEELIZED!`;
+        responseMessage.style.display = 'block';
+
         // Optionally, reset the form after submission
         // document.querySelector('.booking-box').reset();
     });
 </script>
-
 <!-- Contact Section -->
 <section id="contact" class="section">
     <h2>Contact Us</h2>
