--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@ This look focuses on enhancing your best features through expert blending and a 
         <button id="submitBtn">Submit Booking</button>
     </div>
 
-    <div id="responseMessage" style="margin-top: 20px; display: none; color: green; font-weight: bold;"></div>
+    <div id="responseMessage" style="margin-top: 20px; display: none; color: WHITE; font-weight: bold;"></div>
 </section>
 
 <script>
